config-root/namespaces/jx-staging/rails-shopping-cart/rails-shopping-cart-rails-shopping-cart-deploy.yaml
# Source: rails-shopping-cart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-shopping-cart-rails-shopping-cart
  labels:
    draft: draft-app
    chart: "rails-shopping-cart-0.0.4"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: rails-shopping-cart-rails-shopping-cart
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: rails-shopping-cart-rails-shopping-cart
    spec:
      serviceAccountName: rails-shopping-cart-rails-shopping-cart
      containers:
        - name: rails-shopping-cart
          image: "10.98.57.81/gilshin/rails-shopping-cart:0.0.4"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
