config-root/namespaces/jx-staging/rails-shopping-cart/rails-shopping-cart-svc.yaml
# Source: rails-shopping-cart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-shopping-cart
  labels:
    chart: "rails-shopping-cart-0.0.4"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: rails-shopping-cart-rails-shopping-cart
